# mmgc

./: CMakeLists.txt  LICENSE  README.md  build.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/MemoryManager/: CMakeLists.txt  Heap.h  MemoryManager.cpp  MemoryManager.h  ObjectHeader.h
src/Value/: CMakeLists.txt  Value.cpp  Value.h
src/allocators/: IAllocator.h
src/allocators/SingleFreeListAllocator/: CMakeLists.txt  SingleFreeListAllocator.cpp  SingleFreeListAllocator.h
src/gc/: ICollector.h
src/gc/MarkCompactGC/: CMakeLists.txt  MarkCompactGC.cpp  MarkCompactGC.h
src/gc/MarkSweepGC/: CMakeLists.txt  MarkSweepGC.cpp  MarkSweepGC.h
src/util/: number-util.h
test/: CMakeLists.txt  Heap-test.cpp  MarkSweepGC-test.cpp  MemoryManager-test.cpp  ObjectHeader-test.cpp  SingleFreeListAllocator-test.cpp  Value-test.cpp  main.cpp
